# SimpleCADAPI

./: .gitignore  README.md  pyproject.toml
docs/api/: Const.md  ExpressionGraph.md  GraphSession.md  Var.md  deserialize_scalar_field.md  export_model_json.md  export_session_json.md  import_graph_json.md  import_session_json.md  replay_graph.md  var_function.md
docs/core/: README.md
docs/core/serialization/: README.md  expressions-and-replay.md  features-booleans-transforms.md  primitives-and-profiles.md  scalar-fields.md
examples/: .gitignore  01_basic_modeling.py  02_graph_replay.py  03_expressions.py  04_assembly_constraints.py  05_loft_sweep_revolve.py  06_parametric_gear_model.py  07_serialization_operation_tree.py  README.md
refactor-plan/: topology-ql.md
skills/simplecadapi/: SKILL.md
skills/simplecadapi/references/: SDK_OVERVIEW.md  SDK_PACKAGE_SUMMARY.md  SDK_SURFACES.md  V2_MODELING_WORKFLOWS.md
skills/simplecadapi/references/docs/api/: Expr.md  (+97 more)
src/simplecadapi/: __init__.py  _vendor_warning_filters.py  autotag.py  constraints.py  core.py  errors.py  evolve.py  expr.py  field.py  frame.py  freecad_translator.py  graph.py  operations.py  ql.py  selection_signature.py  serializer.py  sketch.py  topology.py  tracking.py
src/simplecadapi/auto_tools/: auto_docs_gen.py  make_export.py  skill_pack.py
src/simplecadapi/kernel/: __init__.py  ocp_booleans.py  ocp_builders.py  ocp_cast.py  ocp_curves.py  ocp_export.py  ocp_features.py  ocp_mesh.py  ocp_properties.py  ocp_topology.py  ocp_transforms.py  spline_fit.py
test/: test_all_features.py  test_assembly_model_export.py  test_auto_docs_gen.py  test_error_harness.py  test_expr_graph.py  test_field_surface.py  test_freecad_translator.py  test_graph_ql.py  test_model_json.py  test_original_api_integration.py  test_public_api_surface.py  test_ql.py  test_rearchitecture_2_0_contract.py  test_rearchitecture_2_0_kernel_builders.py  test_rearchitecture_2_0_kernel_transforms.py  test_rearchitecture_2_0_ops.py  test_rearchitecture_2_0_remaining_ops.py  test_rearchitecture_2_0_structural_remaining.py  test_rearchitecture_2_0_todo_ops.py  test_serialization.py  test_sketch_api.py  test_skill_pack.py  test_tracking_boolean.py  test_tracking_data_models.py  test_tracking_features.py  test_tracking_tags.py
tests/: test_ocp_core_no_cadquery.py  test_topology_identity.py
(+15 files in other folders)
