[project]
name = "simplecadapi"
version = "2.0.0b1"
description = "A simplified OCP-native CAD modeling Python API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "倪旌哲", email = "nijingzhe@zju.edu.cn" }]
maintainers = [{ name = "倪旌哲", email = "nijingzhe@zju.edu.cn" }]
requires-python = ">=3.10"
keywords = ["cad", "modeling", "3d", "design", "ocp", "opencascade"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "rich>=14.0.0",
    "cadquery-ocp>=7.8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.0",
  "black>=23.0",
  "isort>=5.0",
]
editor = []

[project.urls]
Homepage = "https://github.com/NiJingzhe/SimpleCADAPI"
Repository = "https://github.com/NiJingzhe/SimpleCADAPI"
Documentation = "https://github.com/NiJingzhe/SimpleCADAPI#readme"
Issues = "https://github.com/NiJingzhe/SimpleCADAPI/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplecadapi", "docs"]
include = ["src/**/*", "docs/**"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/MANIFEST.in",
  "/src",
  "/docs",
]
exclude = [
  "/.python-version",
  "/uv.lock",
  "/test",
  "/tests",
  "/skills",
  "/sandbox",
  "/examples",
  "/refactor-plan",
  "/scripts",
]

[dependency-groups]
dev = [
    "twine>=6.1.0",
    "pytest",
    "jupyterlab>=4.5.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.8",
    "numpy-stl>=3.2.0",
    "trimesh>=4.11.3",
]

[project.scripts]
evolve = "simplecadapi.auto_tools.evolution:main"
make-export = "simplecadapi.auto_tools.make_export:main"
auto-docs-gen = "simplecadapi.auto_tools.auto_docs_gen:main"
skill-pack = "simplecadapi.auto_tools.skill_pack:main"
